Fixes modal scroll on mobile.

--- a/src/app/_components/modal.component.css
+++ b/src/app/_components/modal.component.css
@@ -149,7 +149,7 @@ xpopup
 
 -------------------------------- */
 .cd-popup {
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 0;
   height: 100%;
